@@ -1,16 +1,15 @@
 package com.team581.math;
 
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 
+import com.google.common.collect.ImmutableList;
 import edu.wpi.first.math.geometry.Translation2d;
-import java.util.List;
 import org.junit.jupiter.api.Test;
 
 final class ObstructionCalculatorTest {
   private static final ObstructionCalculator CALCULATOR =
       ObstructionCalculator.fromTranslations(
-          List.of(
+          ImmutableList.of(
               new Translation2d(0, 0),
               new Translation2d(2, 0),
               new Translation2d(2, 2),
@@ -20,82 +19,84 @@ final class ObstructionCalculatorTest {
   void multipleObstructions() {
     var calculator =
         ObstructionCalculator.fromTranslations(
-            List.of(
+            ImmutableList.of(
                 new Translation2d(0, 0),
                 new Translation2d(1, 0),
                 new Translation2d(1, 1),
                 new Translation2d(0, 1)),
-            List.of(
+            ImmutableList.of(
                 new Translation2d(5, 5),
                 new Translation2d(6, 5),
                 new Translation2d(6, 6),
                 new Translation2d(5, 6)));
 
-    assertTrue(calculator.isObstructed(new Translation2d(0.5, 0.5)));
-    assertTrue(calculator.isObstructed(new Translation2d(5.5, 5.5)));
-    assertFalse(calculator.isObstructed(new Translation2d(3, 3)));
+    assertThat(calculator.isObstructed(new Translation2d(0.5, 0.5))).isTrue();
+    assertThat(calculator.isObstructed(new Translation2d(5.5, 5.5))).isTrue();
+    assertThat(calculator.isObstructed(new Translation2d(3, 3))).isFalse();
   }
 
   @Test
   void pointInsideObstructionIsObstructed() {
-    assertTrue(CALCULATOR.isObstructed(new Translation2d(1, 1)));
+    assertThat(CALCULATOR.isObstructed(new Translation2d(1, 1))).isTrue();
   }
 
   @Test
   void pointOnCornerIsObstructed() {
-    assertTrue(CALCULATOR.isObstructed(new Translation2d(0, 0)));
+    assertThat(CALCULATOR.isObstructed(new Translation2d(0, 0))).isTrue();
   }
 
   @Test
   void pointOnEdgeIsObstructed() {
-    assertTrue(CALCULATOR.isObstructed(new Translation2d(1, 0)));
+    assertThat(CALCULATOR.isObstructed(new Translation2d(1, 0))).isTrue();
   }
 
   @Test
   void pointOutsideObstructionIsNotObstructed() {
-    assertFalse(CALCULATOR.isObstructed(new Translation2d(5, 5)));
+    assertThat(CALCULATOR.isObstructed(new Translation2d(5, 5))).isFalse();
   }
 
   @Test
   void segmentBetweenObstructionsIsNotObstructed() {
     var calculator =
         ObstructionCalculator.fromTranslations(
-            List.of(
+            ImmutableList.of(
                 new Translation2d(0, 0),
                 new Translation2d(1, 0),
                 new Translation2d(1, 1),
                 new Translation2d(0, 1)),
-            List.of(
+            ImmutableList.of(
                 new Translation2d(3, 0),
                 new Translation2d(4, 0),
                 new Translation2d(4, 1),
                 new Translation2d(3, 1)));
 
-    assertFalse(calculator.isObstructed(new Translation2d(1.5, 0.5), new Translation2d(2.5, 0.5)));
+    assertThat(calculator.isObstructed(new Translation2d(1.5, 0.5), new Translation2d(2.5, 0.5)))
+        .isFalse();
   }
 
   @Test
   void segmentEndingAtEdgeIsObstructed() {
-    assertTrue(CALCULATOR.isObstructed(new Translation2d(-1, 1), new Translation2d(0, 1)));
+    assertThat(CALCULATOR.isObstructed(new Translation2d(-1, 1), new Translation2d(0, 1))).isTrue();
   }
 
   @Test
   void segmentEntirelyInsideObstructionIsObstructed() {
-    assertTrue(CALCULATOR.isObstructed(new Translation2d(0.5, 0.5), new Translation2d(1.5, 1.5)));
+    assertThat(CALCULATOR.isObstructed(new Translation2d(0.5, 0.5), new Translation2d(1.5, 1.5)))
+        .isTrue();
   }
 
   @Test
   void segmentOutsideObstructionIsNotObstructed() {
-    assertFalse(CALCULATOR.isObstructed(new Translation2d(3, 3), new Translation2d(5, 5)));
+    assertThat(CALCULATOR.isObstructed(new Translation2d(3, 3), new Translation2d(5, 5))).isFalse();
   }
 
   @Test
   void segmentStartingInsideIsObstructed() {
-    assertTrue(CALCULATOR.isObstructed(new Translation2d(1, 1), new Translation2d(5, 5)));
+    assertThat(CALCULATOR.isObstructed(new Translation2d(1, 1), new Translation2d(5, 5))).isTrue();
   }
 
   @Test
   void segmentThroughObstructionIsObstructed() {
-    assertTrue(CALCULATOR.isObstructed(new Translation2d(-1, 1), new Translation2d(3, 1)));
+    assertThat(CALCULATOR.isObstructed(new Translation2d(-1, 1), new Translation2d(3, 1))).isTrue();
   }
 }
